# Breast-Cancer-Prediction-with-DecisionTree-Classifier

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  workflow.py
breast_cancer_prediction/: __init__.py  config.py  dataset.py  features.py  pca.py  utils.py
breast_cancer_prediction/modeling/: predict.py  train.py
data/interim/: least_imp_features.pkl  testing.pkl  training.pkl
data/processed/: n_dim_testing.pkl  n_dim_training.pkl
data/result/: prediction.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: model.pkl
notebooks/: 01-data-overview-breast-cancer-classification.ipynb  02-decision-tree-model-training.ipynb  03-pca-feature-engineering.ipynb  04-hyperparameter-tuning.ipynb  05-tree-model-explainability_SHAP.ipynb
references/: cookiecutter.md
