[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "breast_cancer_prediction"
version = "0.0.1"
description = "Classification ML project model prediction with Decision Tree Classifier."
authors = [
  { name = "Pragyan Tiwari" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[project.scripts]
make_predictions = "workflow:stages"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["breast_cancer_prediction"]
force_sort_within_sections = true

[tool.uv.sources]
breast-cancer-prediction = { workspace = true }

[dependency-groups]
dev = [
    "breast-cancer-prediction",
    "flit-core>=3.10.1",
    "ipython>=8.30.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "typer>=0.15.1",
    "typer-cli>=0.15.1",
    "typer-slim>=0.15.1",
]
